objects/ccrz__E_PriceListItem__c.object
<CustomObject>
    <fields>
        <fullName>Contracted_Price__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contracted Price</label>
        <referenceTo>SBQQ__ContractedPrice__c</referenceTo>
        <relationshipLabel>CC Price List Items</relationshipLabel>
        <relationshipName>CC_Price_List_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Line</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>CC Price List Items</relationshipLabel>
        <relationshipName>CC_Price_List_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_PriceBookEntry_Id__c</fullName>
        <description>This is the id for the PriceBookEntry Id, stored here due to the inability to create a look up to PriceBookEntry</description>
        <externalId>true</externalId>
        <label>PriceBookEntry Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_PriceBookEntry__c</fullName>
        <formula>IF(Source_PriceBookEntry_Id__c  &lt;&gt; null , HYPERLINK(&quot;/lightning/r/PricebookEntry/&quot; &amp;  Source_PriceBookEntry_Id__c  &amp; &quot;/view&quot;, &quot;View&quot;), null)</formula>
        <label>Price Book Entry</label>
        <type>Text</type>
    </fields>
</CustomObject>